--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,14 @@
+[build-system]
+build-backend = "poetry.masonry.api"
+requires = ["poetry>=0.12"]
+
 [tool]
 [tool.poetry]
-authors = ["Your Name <you@example.com>"]
-name = "root"
-version = "0.0.0"
+authors = ["Ishraq Ahmed <ishbros27@gmail.com>"]
+description = ""
+name = "pcti-lockdown"
+version = "0.1.0"
 [tool.poetry.dependencies]
-colored = "==1.3.93"
-python = "^3.7"
+colored = "^1.4"
+python = "^3.8"
+[tool.poetry.dev-dependencies]
